2014-06-25  Roland Levillain  <roland@lrde.epita.fr>

	Convert Scribo to UTF-8.

	* doc/mainpage.dox: Here.
	* scribo/preprocessing/rotate_90.hh:
	Replace extended characters to convert to plain ASCII.
	Typos.
	* doc/Doxyfile.in (INPUT_ENCODING): Set to UTF-8.

2013-04-18  Guillaume Lazzara  <z@lrde.epita.fr>

	* demo/xml2doc/main.cc: Add --template-path option.

2014-06-20  Roland Levillain  <roland@lrde.epita.fr>

	Remove useless parts from the Scribo documentation machinery.

	* doc/doxyfuns.sty,
	* doc/examples-outputs.mk,
	* doc/examples.mk,
	* doc/examples/dummy.cc,
	* doc/figures.mk,
	* doc/gen-examples-outputs-mk,
	* doc/gen-figures-mk,
	* doc/gen-make-variable,
	* doc/gen-split-examples-mk,
	* doc/gen-split-outputs-mk,
	* doc/graphicx.hva,
	* doc/outputs.mk,
	* doc/outputs/dummy.txt,
	* doc/programs-examples.mk,
	* doc/scribo.sty,
	* doc/split-examples.mk,
	* doc/split-outputs.mk,
	* doc/tools/todoxygen.sh,
	* doc/tutorial.tex:
	Remove.
	* doc/Makefile.am: Adjust and remove useless bits.

2014-06-20  Roland Levillain  <roland@lrde.epita.fr>

	Remove mentions to trash/ directories in Scribo.

	* doc/gen-figures-mk,
	* doc/gen-split-outputs-mk:
	Here.

2014-06-19  Roland Levillain  <roland@lrde.epita.fr>

	Do not use mln_VAR in Scribo.

	* scribo/debug/text_areas_image.hh,
	* src/misc/dmap.cc,
	* src/misc/morpho.cc,
	* src/misc/rectangularity.cc,
	* src/primitive/group/group_from_rag.cc:
	Here.
	* scribo/filter/objects_with_holes.hh,
	* scribo/table/internal/repair_lines.hh,
	* src/text_recognition_in_picture.cc:
	Do not include mln/core/var.hh.

2014-06-18  Roland Levillain  <roland@lrde.epita.fr>

	Make src/primitive/group/group_from_rag.cc compile again.

	* src/primitive/group/group_from_rag.cc: Here.
	* src/primitive/group/Makefile.am (noinst_PROGRAMS):
	Add group_from_rag.

2014-06-17  Roland Levillain  <roland@lrde.epita.fr>

	Update the list of Scribo-related publications.

	* README (Bibliography): Here.
