@@ -1,4 +1,4 @@
-# Copyright (C) 2009, 2010, 2011, 2012 EPITA Research and Development
+# Copyright (C) 2009, 2010, 2011, 2012, 2014 EPITA Research and Development
 # Laboratory (LRDE).
 #
 # This file is part of Olena.
@@ -36,7 +36,8 @@ regen-am:
 
 # FIXME: Change generate_dist_headers.sh so that the action looks like this:
 #
-#	$< $@.tmp && mv -f $@.tmp $@ && chmod -w $@
+#	$(top_srcdir)/build-aux/generate_dist_headers.sh \
+#         $@.tmp && mv -f $@.tmp $@ && chmod -w $@
 #
 $(srcdir)/headers.mk: $(top_srcdir)/build-aux/generate_dist_headers.sh
 	cd $(srcdir)							\
