@@ -1,3 +1,12 @@
+2014-06-26  Roland Levillain  <roland@lrde.epita.fr>
+
+	Make Scribo more compatible with BSD Make.
+
+	* doc/Makefile.am: Do not use `$<' outside suffix rules.
+	* Makefile.am,
+	* tests/unit_test/Makefile.am:
+	Adjust comments.
+
 2014-06-25  Roland Levillain  <roland@lrde.epita.fr>
 
 	Convert Scribo to UTF-8.
